Billing order processing